litmask/tests/compile/mask_all_strict_non_literal_template_error.stderr
error: litmask: skipped literal at $DIR/tests/compile/mask_all_strict_non_literal_template_error.rs:12: non_literal_template
 --> tests/compile/mask_all_strict_non_literal_template_error.rs:9:1
  |
9 | #[mask_all(strict)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `mask_all` (in Nightly builds, run with -Z macro-backtrace for more info)
